@@ -80,9 +80,9 @@ auth_heimdal_gssapi_options_block auth_heimdal_gssapi_option_defaults = {
 #ifdef MACRO_PREDEF
 
 /* Dummy values */
-void auth_heimdal_init(auth_instance *ablock) {}
-int auth_heimdal_server(auth_instance *ablock, uschar *data) {return 0;}
-int auth_heimdal_client(auth_instance *ablock, smtp_inblock *inblock,
+void auth_heimdal_gssapi_init(auth_instance *ablock) {}
+int auth_heimdal_gssapi_server(auth_instance *ablock, uschar *data) {return 0;}
+int auth_heimdal_gssapi_client(auth_instance *ablock, smtp_inblock *inblock,
   smtp_outblock *outblock, int timeout, uschar *buffer, int buffsize) {return 0;}
 void auth_heimdal_gssapi_version_report(FILE *f) {}
 
